działają akcje buttonów

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -7,3 +7,4 @@ COM_REPERTOIRE_CATEGORY="Kategoria"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
 COM_REPERTOIRE_PARTY="Imprezy"
+COM_REPERTOIRE_IMPORT="Import"
