poprawki wg tutoriala pod Joomla 3.x Dodanie linku w menu

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -8,3 +8,4 @@ COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
 COM_REPERTOIRE_PARTY="Imprezy"
 COM_REPERTOIRE_IMPORT="Import"
+COM_REPERTOIRE_ADD="Dodaj utwór"
