--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -1,11 +1,17 @@
 COM_REPERTOIRE="Repertuar muzyczny"
 COM_REPERTOIRE_LIST="Lista utworów"
 COM_REPERTOIRE_TITLE="Tytuł"
+COM_REPERTOIRE_TITLE_DESC="Tytuł utworu"
 COM_REPERTOIRE_ARTIST="Wykonawca"
+COM_REPERTOIRE_ARTIST_DESC="Wykonawca utworu"
 COM_REPERTOIRE_LANGUAGE="Język"
+COM_REPERTOIRE_LANGUAGE_DESC="Język wykonywanego utworu"
 COM_REPERTOIRE_CATEGORY="Kategoria"
+COM_REPERTOIRE_CATEGORY_DESC="Kategoria utworu"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
 COM_REPERTOIRE_PARTY="Imprezy"
 COM_REPERTOIRE_IMPORT="Import"
 COM_REPERTOIRE_ADD="Dodaj utwór"
+COM_REPERTOIRE_EDIT="Edytuj utwór"
+COM_REPERTOIRE_CONFIRM_DELETE="Czy napewno chcesz usunąć utwór?"
