próba dodania kategorii z osobnej tabeli BD

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -8,6 +8,7 @@ COM_REPERTOIRE_LANGUAGE="Język"
 COM_REPERTOIRE_LANGUAGE_DESC="Język wykonywanego utworu"
 COM_REPERTOIRE_CATEGORY="Kategoria"
 COM_REPERTOIRE_CATEGORY_DESC="Kategoria utworu"
+COM_REPERTOIRE_CATEGORIES="Kategorie"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
 COM_REPERTOIRE_PARTY="Imprezy"
@@ -15,3 +16,4 @@ COM_REPERTOIRE_IMPORT="Import"
 COM_REPERTOIRE_ADD="Dodaj utwór"
 COM_REPERTOIRE_EDIT="Edytuj utwór"
 COM_REPERTOIRE_CONFIRM_DELETE="Czy napewno chcesz usunąć utwór?"
+COM_REPERTOIRE_CONFIRM_DELETE_CATEGORIES="Czy napewno chcesz usunąć kategorię utworów?"
