--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -17,3 +17,4 @@ COM_REPERTOIRE_ADD="Dodaj utwór"
 COM_REPERTOIRE_EDIT="Edytuj utwór"
 COM_REPERTOIRE_CONFIRM_DELETE="Czy napewno chcesz usunąć utwór?"
 COM_REPERTOIRE_CONFIRM_DELETE_CATEGORIES="Czy napewno chcesz usunąć kategorię utworów?"
+COM_REPERTOIRE_N_ITEMS_DELETED="Usunięto wybrane utwory."
