poprawione tabele link do yt dla tytułu zmienione pola przy dodawaniu utworu

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -11,6 +11,12 @@ COM_REPERTOIRE_CATEGORY_DESC="Kategoria utworu"
 COM_REPERTOIRE_CATEGORIES="Kategorie"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
+COM_REPERTOIRE_DEMO_AUDIO="audio"
+COM_REPERTOIRE_DEMO_VIDEO="wideo"
+COM_REPERTOIRE_DEMO_AUDIO_FORM_DESC="Wybierz plik mp3"
+COM_REPERTOIRE_DEMO_AUDIO_FORM="Demo MP3"
+COM_REPERTOIRE_DEMO_VIDEO_FORM_DESC="Wpisz link do filmu na YouTube"
+COM_REPERTOIRE_DEMO_VIDEO_FORM="Demo YouTube"
 COM_REPERTOIRE_PARTY="Imprezy"
 COM_REPERTOIRE_IMPORT="Import"
 COM_REPERTOIRE_ADD="Dodaj utwór"
@@ -18,3 +24,5 @@ COM_REPERTOIRE_EDIT="Edytuj utwór"
 COM_REPERTOIRE_CONFIRM_DELETE="Czy napewno chcesz usunąć utwór?"
 COM_REPERTOIRE_CONFIRM_DELETE_CATEGORIES="Czy napewno chcesz usunąć kategorię utworów?"
 COM_REPERTOIRE_N_ITEMS_DELETED="Usunięto wybrane utwory."
+COM_REPERTOIRE_DATE="Data dodania"
+COM_REPERTOIRE_DATE_DESC="Nowododane utwory będą wyróżnione"
