--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -4,3 +4,5 @@ COM_REPERTOIRE_LANGUAGE="Język"
 COM_REPERTOIRE_CATEGORY="Kategoria"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
+COM_REPERTOIRE_DEMO_AUDIO="audio"
+COM_REPERTOIRE_DEMO_VIDEO="wideo"
