usuwanie pliku mp3 podczas edycji zrobione

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -26,3 +26,5 @@ COM_REPERTOIRE_CONFIRM_DELETE_CATEGORIES="Czy napewno chcesz usunąć kategorię
 COM_REPERTOIRE_N_ITEMS_DELETED="Usunięto wybrane utwory."
 COM_REPERTOIRE_DATE="Data dodania"
 COM_REPERTOIRE_DATE_DESC="Nowododane utwory będą wyróżnione"
+COM_REPERTOIRE_REMOVE_MP3="Usuń plik MP3"
+COM_REPERTOIRE_REMOVE_MP3_DESC="Zaznacz czy usunąć plik MP3 z serwera"
