--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -28,3 +28,13 @@ COM_REPERTOIRE_DATE="Data dodania"
 COM_REPERTOIRE_DATE_DESC="Nowododane utwory będą wyróżnione"
 COM_REPERTOIRE_REMOVE_MP3="Usuń plik MP3"
 COM_REPERTOIRE_REMOVE_MP3_DESC="Zaznacz czy usunąć plik MP3 z serwera"
+COM_REPERTOIRE_IMPORT_NOW="Importuj"
+COM_REPERTOIRE_IMPORT_SUCCESS="Utwory zostały zaimportowane."
+COM_REPERTOIRE_IMPORT_ERROR="Wystąpił błąd podczas importu. Sprawdź wymagania pliku."
+COM_REPERTOIRE_IMPORT_INFO="Importowany plik należy zapisać do formatu \"Skoroszyt programu Excel 97-2003 (*xls).\"<br />
+                            Plik powinien zawierać odpowiednio:<br />
+                            - w kolumnie A - tytuły utworów,<br />
+                            - w kolumnie B - wykonawców utworów (opcjonalnie),<br />
+                            - w kolumnie C - język wykonywanych utworów (opcjonalnie)."
+COM_REPERTOIRE_EXCEL_FILE="Plik Excel (*xls)"
+COM_REPERTOIRE_EXCEL_FILE_INFO="Wybierz plik Excel (*xls)"
