--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -38,3 +38,13 @@ COM_REPERTOIRE_IMPORT_INFO="Importowany plik należy zapisać do formatu \"Skoro
                             - w kolumnie C - język wykonywanych utworów (opcjonalnie)."
 COM_REPERTOIRE_EXCEL_FILE="Plik Excel (*xls)"
 COM_REPERTOIRE_EXCEL_FILE_INFO="Wybierz plik Excel (*xls)"
+COM_REPERTOIRE_LIST_CONFIG_LABEL="Wygląd listy utworów"
+COM_REPERTOIRE_SHOW_CATEGORY="Pokaż kategorię utworów"
+COM_REPERTOIRE_SHOW_CATEGORY_DESC="Ustaw, czy ma się wyświetlać kategoria utworów"
+COM_REPERTOIRE_SHOW_DEMO="Pokaż demo utworów"
+COM_REPERTOIRE_SHOW_DEMO_DESC="Ustaw, czy ma się wyświetlać demo utworów"
+COM_REPERTOIRE_PRE_TEXT="Tekst nad listą utworów"
+COM_REPERTOIRE_PRE_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać nad listą utworów"
+COM_REPERTOIRE_POST_TEXT="Tekst pod listą utworów"
+COM_REPERTOIRE_POST_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać pod listą utworów"
+COM_REPERTOIRE_CONFIGURATION="Repertuar muzyczny: Konfiguracja"
