--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -48,3 +48,5 @@ COM_REPERTOIRE_PRE_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać nad l
 COM_REPERTOIRE_POST_TEXT="Tekst pod listą utworów"
 COM_REPERTOIRE_POST_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać pod listą utworów"
 COM_REPERTOIRE_CONFIGURATION="Repertuar muzyczny: Konfiguracja"
+COM_REPERTOIRE_POSITIONS="Liczba wyświetlanych utworów"
+COM_REPERTOIRE_POSITIONS_DESC="Wpisz ilość wyświetlanych utworów na stronę"
