wszystkie ustawienia śmigają

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
@@ -1,2 +1,3 @@
 COM_REPERTOIRE="Repertuar muzyczny"
 COM_REPERTOIRE_LIST="Lista utworów"
+COM_REPERTOIRE_DESC="Zarządzanie repertuarem muzycznym zespołów muzycznych"
