ustawienia wyróżniania nowości

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -50,3 +50,19 @@ COM_REPERTOIRE_POST_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać pod 
 COM_REPERTOIRE_CONFIGURATION="Repertuar muzyczny: Konfiguracja"
 COM_REPERTOIRE_POSITIONS="Liczba wyświetlanych utworów"
 COM_REPERTOIRE_POSITIONS_DESC="Wpisz ilość wyświetlanych utworów na stronę"
+COM_REPERTOIRE_SHOW_NEWS="Wyróżniaj nowości"
+COM_REPERTOIRE_SHOW_NEWS_DESC="Zaznacz czy nowości mają być wyróżnione na liście utworów"
+COM_REPERTOIRE_NEWS="Czas trwania nowości"
+COM_REPERTOIRE_NEWS_DESC="Wybierz jak długo mają być wyróżnione nowo dodane utwory"
+COM_REPERTOIRE_NEWS1="1 miesiąc"
+COM_REPERTOIRE_NEWS2="2 miesiące"
+COM_REPERTOIRE_NEWS3="3 miesiące"
+COM_REPERTOIRE_NEWS4="4 miesiące"
+COM_REPERTOIRE_NEWS5="5 miesięcy"
+COM_REPERTOIRE_NEWS6="6 miesięcy"
+COM_REPERTOIRE_NEWS7="7 miesięcy"
+COM_REPERTOIRE_NEWS8="8 miesięcy"
+COM_REPERTOIRE_NEWS9="9 miesięcy"
+COM_REPERTOIRE_NEWS10="10 miesięcy"
+COM_REPERTOIRE_NEWS11="11 miesięcy"
+COM_REPERTOIRE_NEWS12="12 miesięcy"
