--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -17,10 +17,12 @@ COM_REPERTOIRE_DEMO_AUDIO_FORM_DESC="Wybierz plik mp3"
 COM_REPERTOIRE_DEMO_AUDIO_FORM="Demo MP3"
 COM_REPERTOIRE_DEMO_VIDEO_FORM_DESC="Wpisz link do filmu na YouTube"
 COM_REPERTOIRE_DEMO_VIDEO_FORM="Demo YouTube"
-COM_REPERTOIRE_PARTY="Imprezy"
+COM_REPERTOIRE_EVENTS="Imprezy"
 COM_REPERTOIRE_IMPORT="Import"
 COM_REPERTOIRE_ADD="Dodaj utwór"
 COM_REPERTOIRE_EDIT="Edytuj utwór"
+COM_REPERTOIRE_ADD_EVENT="Dodaj imprezę"
+COM_REPERTOIRE_EDIT_EVENT="Edytuj imprezę"
 COM_REPERTOIRE_CONFIRM_DELETE="Czy napewno chcesz usunąć utwór?"
 COM_REPERTOIRE_CONFIRM_DELETE_CATEGORIES="Czy napewno chcesz usunąć kategorię utworów?"
 COM_REPERTOIRE_N_ITEMS_DELETED="Usunięto wybrane utwory."
@@ -66,3 +68,6 @@ COM_REPERTOIRE_NEWS9="9 miesięcy"
 COM_REPERTOIRE_NEWS10="10 miesięcy"
 COM_REPERTOIRE_NEWS11="11 miesięcy"
 COM_REPERTOIRE_NEWS12="12 miesięcy"
+COM_REPERTOIRE_EVENT_NAME="Impreza"
+COM_REPERTOIRE_EVENT_DATE="Data"
+COM_REPERTOIRE_EVENT_PASS="Hasło"
