--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -6,3 +6,7 @@ COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
 COM_REPERTOIRE_DEMO_AUDIO="audio"
 COM_REPERTOIRE_DEMO_VIDEO="wideo"
+COM_REPERTOIRE_EVENTS_INFO="Wybierz datę wydarzenia na którym będziesz uczestniczyć.<br />
+Hasło to nazwisko najważniejszej osoby wydarzenia w wersji męskiej, pisane małymi literami, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\".<br />
+Dla imprez publicznych typu festyny, pozostaw hasło puste."
+COM_REPERTOIRE_EVENTS_CHECK_ERROR="Błędne dane."
