--- a/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
@@ -1,3 +1,4 @@
 COM_REPERTOIRE="Repertuar muzyczny"
 COM_REPERTOIRE_LIST="Lista utworów"
 COM_REPERTOIRE_DESC="Zarządzanie repertuarem muzycznym zespołów muzycznych"
+COM_REPERTOIRE_EVENTS_REGISTER="Wybór repertuaru na imprezę"
