events step2 gotowy

--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -10,3 +10,5 @@ COM_REPERTOIRE_EVENTS_INFO="Wybierz datę wydarzenia na którym będziesz uczest
 Hasło to nazwisko najważniejszej osoby wydarzenia w wersji męskiej, pisane małymi literami, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\".<br />
 Dla imprez publicznych typu festyny, pozostaw hasło puste."
 COM_REPERTOIRE_EVENTS_CHECK_ERROR="Błędne dane."
+COM_REPERTOIRE_EVENTS_SESSION_ERROR="Sesja wygasła."
+COM_REPERTOIRE_NEXT="Dalej"
