dodanie info o imprezie

--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -14,3 +14,5 @@ COM_REPERTOIRE_EVENTS_SESSION_ERROR="Sesja wygasła."
 COM_REPERTOIRE_NEXT="Dalej"
 COM_REPERTOIRE_EVENTS_YOUR_LIST="Wybierz utwory, które chcesz usłyszeć na wybranej imprezie i kliknij <strong>Dalej</strong>."
 COM_REPERTOIRE_EVENTS_ADD_SUCCESS="Twoja lista utworów została przesłana!"
+COM_REPERTOIRE_EVENT_NAME="Impreza:"
+COM_REPERTOIRE_EVENT_DATE="Data wydarzenia:"
