--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -71,3 +71,7 @@ COM_REPERTOIRE_NEWS12="12 miesięcy"
 COM_REPERTOIRE_EVENT_NAME="Impreza"
 COM_REPERTOIRE_EVENT_DATE="Data"
 COM_REPERTOIRE_EVENT_PASS="Hasło"
+COM_REPERTOIRE_EVENT_SONGS_LIST="Co zagrać"
+COM_REPERTOIRE_EVENT_SONGS_LIST_LINK="Lista"
+COM_REPERTOIRE_COUNT="Popularność"
+COM_REPERTOIRE_PRINT="Drukuj"
