Usuwanie starych imprez

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -75,3 +75,6 @@ COM_REPERTOIRE_EVENT_SONGS_LIST="Co zagrać"
 COM_REPERTOIRE_EVENT_SONGS_LIST_LINK="Lista"
 COM_REPERTOIRE_COUNT="Popularność"
 COM_REPERTOIRE_PRINT="Drukuj"
+COM_REPERTOIRE_DELETE_OLD="Usuń przestarzałe imprezy"
+COM_REPERTOIRE_CONFIRM_DELETE_OLD="Czy na pewno chcesz usunąć minione imprezy?"
+COM_REPERTOIRE_DELETED_OLD_SUCCESS="Wszystkie minione imprezy zostały usunięte."
