import także kategorii i linka do filmiku dema

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -37,10 +37,14 @@ COM_REPERTOIRE_IMPORT_INFO="Importowany plik należy zapisać do formatu \"Skoro
                             Plik powinien zawierać odpowiednio:<br />
                             - w kolumnie A - tytuły utworów,<br />
                             - w kolumnie B - wykonawców utworów (opcjonalnie),<br />
-                            - w kolumnie C - język wykonywanych utworów (opcjonalnie)."
+                            - w kolumnie C - język wykonywanych utworów (opcjonalnie),<br />
+                            - w kolumnie D - kategoria, np. Country (opcjonalnie - kategoria musi być wcześniej utworzona),<br />
+                            - w kolumnie E - link do wideo z demem zespołu (opcjonalnie)."
 COM_REPERTOIRE_EXCEL_FILE="Plik Excel (*xls)"
 COM_REPERTOIRE_EXCEL_FILE_INFO="Wybierz plik Excel (*xls)"
 COM_REPERTOIRE_LIST_CONFIG_LABEL="Wygląd listy utworów"
+COM_REPERTOIRE_SHOW_LANGUAGE="Pokaż język utworów"
+COM_REPERTOIRE_SHOW_LANGUAGE_DESC="Ustaw, czy ma się wyświetlać język utworów"
 COM_REPERTOIRE_SHOW_CATEGORY="Pokaż kategorię utworów"
 COM_REPERTOIRE_SHOW_CATEGORY_DESC="Ustaw, czy ma się wyświetlać kategoria utworów"
 COM_REPERTOIRE_SHOW_DEMO="Pokaż demo utworów"
