fix wysyłania repertuaru + zmiana nazwy buttona

--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -13,7 +13,8 @@ Dla imprez publicznych typu festyny, pozostaw hasło puste."
 COM_REPERTOIRE_EVENTS_CHECK_ERROR="Błędne dane."
 COM_REPERTOIRE_EVENTS_SESSION_ERROR="Sesja wygasła."
 COM_REPERTOIRE_NEXT="Dalej"
-COM_REPERTOIRE_EVENTS_YOUR_LIST="Wybierz utwory, które chcesz usłyszeć na wybranej imprezie i kliknij <strong>Dalej</strong>."
+COM_REPERTOIRE_EVENTS_YOUR_LIST="Wybierz utwory, które chcesz usłyszeć na wybranej imprezie i kliknij <strong>Prześlij repertuar</strong>."
 COM_REPERTOIRE_EVENTS_ADD_SUCCESS="Twoja lista utworów została przesłana!"
 COM_REPERTOIRE_EVENT_NAME="Impreza:"
 COM_REPERTOIRE_EVENT_DATE="Data wydarzenia:"
+COM_REPERTOIRE_SEND_REPERTOIRE="Przeslij repertuar"
