--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -82,3 +82,6 @@ COM_REPERTOIRE_PRINT="Drukuj"
 COM_REPERTOIRE_DELETE_OLD="Usuń przestarzałe imprezy"
 COM_REPERTOIRE_CONFIRM_DELETE_OLD="Czy na pewno chcesz usunąć minione imprezy?"
 COM_REPERTOIRE_DELETED_OLD_SUCCESS="Wszystkie minione imprezy zostały usunięte."
+COM_REPERTOIRE_ADDITIONAL_INFO="Dodatkowe informacje/życzenia/dedykacje"
+COM_REPERTOIRE_ID="L.p"
+COM_REPERTOIRE_INFO_CONTENT="Treść"
