--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -18,3 +18,4 @@ COM_REPERTOIRE_EVENTS_ADD_SUCCESS="Twoja lista utworów została przesłana!"
 COM_REPERTOIRE_EVENT_NAME="Impreza:"
 COM_REPERTOIRE_EVENT_DATE="Data wydarzenia:"
 COM_REPERTOIRE_SEND_REPERTOIRE="Przeslij repertuar"
+COM_REPERTOIRE_ADDITIONAL_INFO="Dodatkowe informacje/życzenia/dedykacje"
