info o haśle dla admina

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -85,3 +85,7 @@ COM_REPERTOIRE_DELETED_OLD_SUCCESS="Wszystkie minione imprezy zostały usunięte
 COM_REPERTOIRE_ADDITIONAL_INFO="Dodatkowe informacje/życzenia/dedykacje"
 COM_REPERTOIRE_ID="L.p"
 COM_REPERTOIRE_INFO_CONTENT="Treść"
+COM_REPERTOIRE_EVENTS_INFO="Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, 
+pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". 
+Dla wesela będzie to nazwisko pana młodego.<br />
+Dla imprez publicznych typu festyny, pozostaw hasło puste, aby każdy zainteresowany mógł dobrać repertuar."
