dodanie opisu przy instalacji + paczka instalacyjna 1.21

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -1,4 +1,5 @@
 COM_REPERTOIRE="Repertuar muzyczny"
+COM_REPERTOIRE_DESC="Zarządzanie repertuarem muzycznym zespołów muzycznych"
 COM_REPERTOIRE_LIST="Lista utworów"
 COM_REPERTOIRE_TITLE="Tytuł"
 COM_REPERTOIRE_TITLE_DESC="Tytuł utworu"
