brak pl znaków w haśle - opis

--- a/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/language/pl-PL/pl-PL.com_repertoire.ini
@@ -9,8 +9,9 @@ COM_REPERTOIRE_DEMO_VIDEO="wideo"
 COM_REPERTOIRE_EVENTS_INFO="Wybierz datę wydarzenia na którym będziesz uczestniczyć.<br />
 Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". 
 Dla wesela będzie to nazwisko pana młodego.<br />
-Jeśli do imprezy nie pasuje żadne nazwisko, wpisz miejscowość.<br />
-Dla imprez publicznych typu festyny, pozostaw hasło puste."
+Jeśli do imprezy nie pasuje żadne nazwisko, wpisz <strong>miejscowość</strong>.<br />
+Dla imprez publicznych typu festyny, pozostaw hasło puste.<br />
+NIE UŻYWAJ POLSKICH ZNAKÓW!"
 COM_REPERTOIRE_EVENTS_CHECK_ERROR="Błędne dane."
 COM_REPERTOIRE_EVENTS_SESSION_ERROR="Sesja wygasła."
 COM_REPERTOIRE_NEXT="Dalej"
