--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -89,5 +89,6 @@ COM_REPERTOIRE_INFO_CONTENT="Treść"
 COM_REPERTOIRE_EVENTS_INFO="Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, 
 pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". 
 Dla wesela będzie to nazwisko pana młodego.<br />
-Jeśli do imprezy nie pasuje żadne nazwisko, wpisz miejscowość.<br />
-Dla imprez publicznych typu festyny, pozostaw hasło puste, aby każdy zainteresowany mógł dobrać repertuar."
+Jeśli do imprezy nie pasuje żadne nazwisko, wpisz <strong>miejscowość</strong>.<br />
+Dla imprez publicznych typu festyny, pozostaw hasło puste, aby każdy zainteresowany mógł dobrać repertuar.<br />
+NIE UŻYWAJ POLSKICH ZNAKÓW!"
