jeśli są same życzenia be piosenek to też działa coniguracja infa o haśle

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -89,6 +89,6 @@ COM_REPERTOIRE_INFO_CONTENT="Treść"
 COM_REPERTOIRE_EVENTS_INFO="Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, 
 pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". 
 Dla wesela będzie to nazwisko pana młodego.<br />
-Jeśli do imprezy nie pasuje żadne nazwisko, wpisz <strong>miejscowość</strong>.<br />
-Dla imprez publicznych typu festyny, pozostaw hasło puste, aby każdy zainteresowany mógł dobrać repertuar.<br />
+Jeśli do imprezy nie pasuje żadne nazwisko (np. impreza publiczna, zabawa andrzejkowa itp.), wpisz <strong>miejscowość</strong>.<br />
 NIE UŻYWAJ POLSKICH ZNAKÓW!"
+COM_REPERTOIRE_PASS_CONFIG_LABEL="Informacje dotyczące hasła"
