poprawki kosmetyczne wersja 1.51

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -92,3 +92,4 @@ Dla wesela będzie to nazwisko pana młodego.<br />
 Jeśli do imprezy nie pasuje żadne nazwisko (np. impreza publiczna, zabawa andrzejkowa itp.), wpisz <strong>miejscowość</strong>.<br />
 NIE UŻYWAJ POLSKICH ZNAKÓW!"
 COM_REPERTOIRE_PASS_CONFIG_LABEL="Informacje dotyczące hasła"
+COM_REPERTOIRE_PASS_CONFIG_INFO="Pozostaw puste dla domyślnej informacji - taka sama pojawia się w panelu administracyjnym w sekcji Imprezy"
