--- a/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.sys.ini
@@ -1,6 +1,6 @@
 COM_REPERTOIRE="Repertuar muzyczny"
 COM_REPERTOIRE_LIST="Lista utworów"
-COM_REPERTOIRE_DESC="Zarządzanie repertuarem muzycznym zespołów muzycznych"
+COM_REPERTOIRE_DESC="Zarządzanie repertuarem zespołów muzycznych"
 COM_REPERTOIRE_EVENTS_REGISTER="Wybór repertuaru na imprezę"
 COM_REPERTOIRE_EVENTS="Imprezy"
 COM_REPERTOIRE_CATEGORIES="Kategorie"
