poprawa błędnych plików językowych wyrzucenie zbędnego zapytania do bazy

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -34,13 +34,7 @@ COM_REPERTOIRE_REMOVE_MP3_DESC="Zaznacz czy usunąć plik MP3 z serwera"
 COM_REPERTOIRE_IMPORT_NOW="Importuj"
 COM_REPERTOIRE_IMPORT_SUCCESS="Utwory zostały zaimportowane."
 COM_REPERTOIRE_IMPORT_ERROR="Wystąpił błąd podczas importu. Sprawdź wymagania pliku."
-COM_REPERTOIRE_IMPORT_INFO="Importowany plik należy zapisać do formatu \"Skoroszyt programu Excel 97-2003 (*xls).\"<br />
-                            Plik powinien zawierać odpowiednio:<br />
-                            - w kolumnie A - tytuły utworów,<br />
-                            - w kolumnie B - wykonawców utworów (opcjonalnie),<br />
-                            - w kolumnie C - język wykonywanych utworów (opcjonalnie),<br />
-                            - w kolumnie D - kategoria, np. Country (opcjonalnie - kategoria musi być wcześniej utworzona),<br />
-                            - w kolumnie E - link do wideo z demem zespołu (opcjonalnie)."
+COM_REPERTOIRE_IMPORT_INFO="Importowany plik należy zapisać do formatu \"Skoroszyt programu Excel 97-2003 (*xls).\"<br />Plik powinien zawierać odpowiednio:<br />                            - w kolumnie A - tytuły utworów,<br />                            - w kolumnie B - wykonawców utworów (opcjonalnie),<br />                            - w kolumnie C - język wykonywanych utworów (opcjonalnie),<br />                            - w kolumnie D - kategoria, np. Country (opcjonalnie - kategoria musi być wcześniej utworzona),<br />                            - w kolumnie E - link do wideo z demem zespołu (opcjonalnie)."
 COM_REPERTOIRE_EXCEL_FILE="Plik Excel (*xls)"
 COM_REPERTOIRE_EXCEL_FILE_INFO="Wybierz plik Excel (*xls)"
 COM_REPERTOIRE_LIST_CONFIG_LABEL="Wygląd listy utworów"
@@ -86,10 +80,6 @@ COM_REPERTOIRE_DELETED_OLD_SUCCESS="Wszystkie minione imprezy zostały usunięte
 COM_REPERTOIRE_ADDITIONAL_INFO="Dodatkowe informacje/życzenia/dedykacje"
 COM_REPERTOIRE_ID="L.p"
 COM_REPERTOIRE_INFO_CONTENT="Treść"
-COM_REPERTOIRE_EVENTS_INFO="Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, 
-pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". 
-Dla wesela będzie to nazwisko pana młodego.<br />
-Jeśli do imprezy nie pasuje żadne nazwisko (np. impreza publiczna, zabawa andrzejkowa itp.), wpisz <strong>miejscowość</strong>.<br />
-NIE UŻYWAJ POLSKICH ZNAKÓW!"
+COM_REPERTOIRE_EVENTS_INFO="Hasło to <strong>nazwisko</strong> najważniejszej osoby wydarzenia <strong>w wersji męskiej, pisane małymi literami</strong>, np. dla Agaty Kowalskiej która będzie miała 18-stkę będzie to \"kowalski\". Dla wesela będzie to nazwisko pana młodego.<br />Jeśli do imprezy nie pasuje żadne nazwisko (np. impreza publiczna, zabawa andrzejkowa itp.), wpisz <strong>miejscowość</strong>.<br />NIE UŻYWAJ POLSKICH ZNAKÓW!"
 COM_REPERTOIRE_PASS_CONFIG_LABEL="Informacje dotyczące hasła"
 COM_REPERTOIRE_PASS_CONFIG_INFO="Pozostaw puste dla domyślnej informacji - taka sama pojawia się w panelu administracyjnym w sekcji Imprezy"
