Wygląd dema - albo samo wideo albo samo audio

--- a/administrator/language/pl-PL/pl-PL.com_repertoire.ini
+++ b/administrator/language/pl-PL/pl-PL.com_repertoire.ini
@@ -12,8 +12,8 @@ COM_REPERTOIRE_CATEGORY_DESC="Kategoria utworu"
 COM_REPERTOIRE_CATEGORIES="Kategorie"
 COM_REPERTOIRE_YOUTUBE="YouTube"
 COM_REPERTOIRE_DEMO="Demo"
-COM_REPERTOIRE_DEMO_AUDIO="audio"
-COM_REPERTOIRE_DEMO_VIDEO="wideo"
+COM_REPERTOIRE_DEMO_AUDIO="Audio"
+COM_REPERTOIRE_DEMO_VIDEO="Wideo"
 COM_REPERTOIRE_DEMO_AUDIO_FORM_DESC="Wybierz plik mp3"
 COM_REPERTOIRE_DEMO_AUDIO_FORM="Demo MP3"
 COM_REPERTOIRE_DEMO_VIDEO_FORM_DESC="Wpisz link do filmu na YouTube"
@@ -42,8 +42,10 @@ COM_REPERTOIRE_SHOW_LANGUAGE="Pokaż język utworów"
 COM_REPERTOIRE_SHOW_LANGUAGE_DESC="Ustaw, czy ma się wyświetlać język utworów"
 COM_REPERTOIRE_SHOW_CATEGORY="Pokaż kategorię utworów"
 COM_REPERTOIRE_SHOW_CATEGORY_DESC="Ustaw, czy ma się wyświetlać kategoria utworów"
-COM_REPERTOIRE_SHOW_DEMO="Pokaż demo utworów"
-COM_REPERTOIRE_SHOW_DEMO_DESC="Ustaw, czy ma się wyświetlać demo utworów"
+COM_REPERTOIRE_SHOW_DEMO_AUDIO="Pokaż demo audio"
+COM_REPERTOIRE_SHOW_DEMO_AUDIO_DESC="Ustaw, czy ma się wyświetlać demo audio utworów"
+COM_REPERTOIRE_SHOW_DEMO_VIDEO="Pokaż demo wideo"
+COM_REPERTOIRE_SHOW_DEMO_VIDEO_DESC="Ustaw, czy ma się wyświetlać demo wideo utworów"
 COM_REPERTOIRE_PRE_TEXT="Tekst nad listą utworów"
 COM_REPERTOIRE_PRE_TEXT_DESC="Wprowadź tekst, który ma się wyświetlać nad listą utworów"
 COM_REPERTOIRE_POST_TEXT="Tekst pod listą utworów"
